# todolist_fastapi

./: main.py  pyproject.toml
